--- a/client_v2/package.json
+++ b/client_v2/package.json
@@ -27,7 +27,8 @@
     "react-player": "^2.11.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2-pre.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "web-audio-api": "^0.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
