--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.5.0",
+    "moment": "^2.29.4",
     "next": "^13.1.1",
     "next-redux-wrapper": "^8.1.0",
     "nodemon": "^2.0.20",
