--- a/client_v2/tsconfig.json
+++ b/client_v2/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/Chatbot/Chatbot.js", "redux/_reducers/message_reducer.js"],
   "exclude": ["node_modules"]
 }
