--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google-cloud/dialogflow": "^5.4.0",
+    "@next/font": "^13.2.3",
     "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
@@ -12,6 +13,8 @@
     "next": "^13.1.1",
     "next-redux-wrapper": "^8.1.0",
     "nodemon": "^2.0.20",
+    "react-clock": "^4.1.0",
+    "react-open-weather": "^1.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "redux": "^4.2.0",
