--- a/DFfullfillment/package.json
+++ b/DFfullfillment/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.1",
     "csv-parser": "^3.0.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.5.0",
     "moment": "^2.29.4",
-    "body-parser": "^1.20.1"
+    "qrcode": "^1.5.1"
   },
   "name": "df_fullfillment_service",
   "version": "1.0.0",
