--- a/client_v2/package.json
+++ b/client_v2/package.json
@@ -30,6 +30,7 @@
     "react-speech-recognition": "^3.10.0",
     "regenerator-runtime": "^0.13.11",
     "typescript": "4.9.4",
+    "wavesurfer.js": "^6.5.2",
     "web-audio-api": "^0.2.2"
   },
   "devDependencies": {
