--- a/client_v2/package.json
+++ b/client_v2/package.json
@@ -20,6 +20,7 @@
     "cloudinary-react": "^1.8.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "lodash.memoize": "^4.1.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
