--- a/fulfillmentService/Dockerfile.fulfillment
+++ b/fulfillmentService/Dockerfile.fulfillment
@@ -1,13 +1,31 @@
 FROM node:16-alpine
 
+# Install ngrok
+RUN apk add --no-cache wget && \
+    wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip && \
+    unzip ngrok-stable-linux-amd64.zip && \
+    rm ngrok-stable-linux-amd64.zip && \
+    mv ngrok /usr/local/bin/ngrok && \
+    apk del wget
+
+
+# Install curl and jq
+RUN apk add --no-cache curl jq
+
+# Set working directory
 WORKDIR /app
 
-COPY package.json /app/
-COPY DFFullfillment.js /app/
-COPY serviceAccountKey.json /app/
+# Copy app files
+COPY package.json ./package.json
+COPY DFFullfillment.js ./DFFullfillment.js
+COPY serviceAccountKey.json ./serviceAccountKey.json
+COPY makePortOnline.sh ./makePortOnline.sh
 
+# Install dependencies
 RUN npm install
 
-CMD ["npm", "run", "dev"]
-
+# Expose port
 EXPOSE 3030
+
+# Start ngrok and update fulfillment URL
+CMD ["sh", "-c", "./makePortOnline.sh"]
